--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="https://adibrasel.github.io/Tosil_Office/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">অফিস ফাইল</a>
+                  <a class="nav-link" href="https://adibrasel.github.io/Tosil_Office/office_file/index.html">অফিস ফাইল</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="uttoradikar/index.html">উত্তরাধীকার</a>
+                  <a class="nav-link"  href="https://adibrasel.github.io/Tosil_Office/uttoradikar/index.html">উত্তরাধীকার</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
